<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".guesstheword.fragments.TitleFragment">

        <TextView
            android:id="@+id/get_ready_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/get_ready_to"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            style="@style/CommonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_ready_tv"
            android:layout_centerInParent="true"
            android:text="@string/guess_the_word" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/normal_32dp"
            style="@style/CommonBtnStyle"/>

    </RelativeLayout>
</layout>