<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="com.gurureddy.contactmanagerapp.trivia.model.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".trivia.AboutMe">

        <TextView
            android:id="@+id/name_tv"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{myName.name}"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nick_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            style="@style/NameStyle"
            android:inputType="textPersonName"
            android:hint="@string/name_hint" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="@dimen/layout_width_100dp"
            android:layout_height="wrap_content"
            android:text="@string/done_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/roboto"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/nick_name_tv"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@{myName.nickName}"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_Iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:contentDescription="@string/yellow_stars"
            android:src="@android:drawable/btn_star_big_on"
            android:layout_marginStart="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_top" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:padding="@dimen/padding_top"
                android:text="@string/bio" />
        </ScrollView>
    </LinearLayout>
</layout>