<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ColorMyView">

        <ImageView
            android:id="@+id/box_one_tv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="@dimen/margin_top"
            android:src="@drawable/img1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/box_two_tv"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="@dimen/margin_top"
            android:src="@drawable/img2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one_tv" />

        <ImageView
            android:id="@+id/box_3_tv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/img3"
            app:layout_constraintBottom_toTopOf="@+id/box_4_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_tv"
            app:layout_constraintTop_toTopOf="@+id/box_two_tv" />

        <ImageView
            android:id="@+id/box_4_tv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/img4"
            app:layout_constraintBottom_toTopOf="@+id/box_5_Tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_tv"
            app:layout_constraintTop_toBottomOf="@+id/box_3_tv" />

        <ImageView
            android:id="@+id/box_5_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/img5"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_tv"
            app:layout_constraintTop_toBottomOf="@+id/box_4_tv" />

        <TextView
            android:id="@+id/table_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top"
            android:text="@string/how_to_play"
            android:textSize="28sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_the_screen_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/table_text"
            app:layout_constraintTop_toBottomOf="@+id/box_two_tv"
            app:layout_constraintVertical_bias="0.061" />

        <Button
            android:id="@+id/red_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
            app:layout_constraintEnd_toStartOf="@+id/yellow_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yellow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/green_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/red_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.96" />

        <Button
            android:id="@+id/green_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/green"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yellow_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>