<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sleepTrackerViewModel"
            type="com.gurureddy.contactmanagerapp.sleepNapApp.sleepTracker.SleepTrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepNapApp.sleepTracker.SleepTrackerFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleep_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/clear_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_btn" />

        <Button
            android:id="@+id/start_btn"
            style="@style/CommonBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_44dp"
            android:layout_marginTop="@dimen/small_20dp"
            android:enabled="@{sleepTrackerViewModel.startButtonVisible}"
            android:onClick="@{()-> sleepTrackerViewModel.onStartTracking()}"
            android:text="@string/start_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop_btn"
            style="@style/CommonBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_20dp"
            android:layout_marginEnd="@dimen/normal_44dp"
            android:enabled="@{sleepTrackerViewModel.stopButtonVisible}"
            android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
            android:text="@string/stop_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear_btn"
            style="@style/CommonBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_20dp"
            android:layout_marginVertical="20dp"
            android:enabled="@{sleepTrackerViewModel.clearButtonVisible}"
            android:onClick="@{() ->sleepTrackerViewModel.onClear()}"
            android:text="@string/clear_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>